Minor whitespace fix for homepage feature segment

--- a/css/custom.css
+++ b/css/custom.css
@@ -48,7 +48,7 @@ html {
 
 .global .feature.segment {
   margin: 0em;
-  padding: 6rem 0rem;
+  padding: 3rem 0rem;
 }
 .global .feature.segment p {
   min-height: 50px;
